--- a/source/template/common/dishes-cards.pug
+++ b/source/template/common/dishes-cards.pug
@@ -4,11 +4,11 @@ section.dishes-cards
             .dishes-card__type Полезные статьи
             h3.dishes-card__title Картофельный салат с салями
             div.dishes-card__info
-                .date Февраль 29, 2017
-                | |
+                | Февраль 29, 2017
+                .dishes-card__line
                 .dishes-card__comments
                     i.fas.fa-comments
-                    | 0
+                    | 3
             img.dishes-card__img--big(src="assets/img/dishes-big-card.jpg" alt="dishes photo")
             p.dishes-card__paragraph.dishes-card__paragraph--big Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
             .dishes-card__links
