--- a/source/template/common/footer1.pug
+++ b/source/template/common/footer1.pug
@@ -38,7 +38,7 @@ footer.footer
                         .last-posts__date Ноябрь 12, 2017
         .subscription.subscription--footer
             .subscription__wrapper.subscription__wrapper--footer
-                h3.subscription__title.subscription__title--footer подписка на новости
+                h3.subscription__title.subscription__title--footer Подписка на новости
                 p.subscription__paragraph Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, tempora incidunt.
                 form.subscription__form
                     input.subscription__input.subscription__input--footer(type="email", name="email", placeholder="Ваша электронная почта ...")
