--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -28,4 +28,4 @@ html(lang="ru")
         include common/footer1
         script(defer src="assets/js/jquery-3.2.1.min.js")
         script(defer src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.6/js/swiper.min.js")
-        script(defer src="assets/js/main.js")
+        script(defer src="assets/js/main.min.js")
